// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CareerModal renders component 1`] = `
<div
  className="modal container"
  role="dialog"
>
  <section
    className="modalContainer"
  >
    <div
      className="mock"
    >
      Icon - 
      xmark
    </div>
    <div
      className="modalContent"
    >
      <img
        alt="Methane/Landfill Gas Collection System Operators"
        className="image"
        src="https://cdn.traitify.com/careers/d7da4259-9f10-4121-b0ca-7534b3ee2d3b_methane-landfill-gas-collection-system-operators"
      />
      <h2
        className="title"
      >
        Methane/Landfill Gas Collection System Operators
      </h2>
      <p
        className="description"
      >
        Direct daily operations, maintenance, or repair of landfill gas projects, including maintenance of daily logs, determination of service priorities, and compliance with reporting requirements.
      </p>
      <hr />
      <h3
        className="heading"
      >
        <div
          className="mock"
        >
          Icon - 
          circle-info
        </div>
         
        career_information
        :
      </h3>
      <ul
        className="info"
      >
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              dollar-sign
            </div>
             
            salary_mean
            :
          </h4>
          <div
            className="infoText salary"
          >
            $107060
          </div>
        </li>
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              chart-bar
            </div>
             
            employment_growth
            :
          </h4>
          <div
            className="infoText growth"
          >
            -3.7%
          </div>
        </li>
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              graduation-cap
            </div>
             
            education
            :
          </h4>
          <div
            className="infoText education"
          >
            experience_level_1
          </div>
        </li>
      </ul>
      <ul
        className="info"
      >
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              lightbulb
            </div>
             
            bright_future
            :
          </h4>
          <div
            className="infoText"
          >
            <input
              aria-label="bright_future"
              checked={true}
              className="check"
              disabled={true}
              readOnly={true}
              type="checkbox"
            />
            <div
              className="mock"
            >
              Icon - 
              square-check
            </div>
          </div>
        </li>
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              leaf
            </div>
             
            green_career
            :
          </h4>
          <div
            className="infoText"
          >
            <input
              aria-label="green_career"
              checked={true}
              className="check"
              disabled={true}
              readOnly={true}
              type="checkbox"
            />
            <div
              className="mock"
            >
              Icon - 
              square-check
            </div>
          </div>
        </li>
        <li>
          <div
            className="center"
          >
            <button
              className="legendToggle"
              onClick={[Function]}
              title="more_information"
              type="button"
            >
              help
               
              <div
                className="mock"
              >
                Icon - 
                question
              </div>
            </button>
          </div>
        </li>
      </ul>
      <p
        className="center"
      >
        <a
          className="btnPrimary"
          href="http://www.onetonline.org/link/summary/11-3051.05"
          rel="noopener noreferrer"
          target="_blank"
          title="view_on_onet"
        >
          view_on_onet
        </a>
      </p>
      <hr />
      <h3
        className="heading"
      >
        <div
          className="mock"
        >
          Icon - 
          earth-americas
        </div>
         
        education_level
      </h3>
      <ol
        className="experience"
      >
        <li
          className="active"
        />
        <li
          className=""
        />
        <li
          className=""
        />
        <li
          className=""
        />
        <li
          className=""
        />
      </ol>
      <p>
        Little or no previous work-related skill, knowledge, or experience is needed for these occupations. For example, a person can become a waiter or waitress even if he/she has never worked before.
      </p>
      <hr />
      <h3
        className="heading"
      >
        <div
          className="mock"
        >
          Icon - 
          circle-half-stroke
        </div>
         
        match_rate
      </h3>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "match_rate_html",
          }
        }
      />
      <div>
        <div
          className="mock"
        >
          Highchart
        </div>
      </div>
      <div />
      <hr />
      <div>
        <h3>
          <div
            className="mock"
          >
            Icon - 
            square-up-right
          </div>
           
          job_links
        </h3>
        <ul
          className="jobsLinks"
        >
          <li>
            <a
              className="jobLink"
              href="http://www.mynextmove.org/profile/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="My Next Move"
            >
              <img
                alt="My Next Move"
                src="https://cdn.traitify.com/assets/images/job-links/my-next-move.jpg"
              />
            </a>
          </li>
          <li>
            <a
              className="jobLink"
              href="http://www.onetonline.org/link/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="O*Net Online"
            >
              <img
                alt="O*Net Online"
                src="https://cdn.traitify.com/assets/images/job-links/o-net-2.jpg"
              />
            </a>
          </li>
          <li>
            <a
              className="jobLink"
              href="http://www.miproximopaso.org/profile/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="Mi Proximo Paso"
            >
              <img
                alt="Mi Proximo Paso"
                src="https://cdn.traitify.com/assets/images/job-links/mi-proximo-paso.jpg"
              />
            </a>
          </li>
          <li>
            <a
              className="jobLink"
              href="http://www.mynextmove.org/vets/profile/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="My Next Move for Veterans"
            >
              <img
                alt="My Next Move for Veterans"
                src="https://cdn.traitify.com/assets/images/job-links/my-next-move-veterans.jpg"
              />
            </a>
          </li>
        </ul>
      </div>
      <hr />
    </div>
  </section>
</div>
`;

exports[`CareerModal renders legend 1`] = `
<div
  className="modal container"
  role="dialog"
>
  <section
    className="modalContainer"
  >
    <div
      className="mock"
    >
      Icon - 
      xmark
    </div>
    <div
      className="modalContent"
    >
      <img
        alt="Methane/Landfill Gas Collection System Operators"
        className="image"
        src="https://cdn.traitify.com/careers/d7da4259-9f10-4121-b0ca-7534b3ee2d3b_methane-landfill-gas-collection-system-operators"
      />
      <h2
        className="title"
      >
        Methane/Landfill Gas Collection System Operators
      </h2>
      <p
        className="description"
      >
        Direct daily operations, maintenance, or repair of landfill gas projects, including maintenance of daily logs, determination of service priorities, and compliance with reporting requirements.
      </p>
      <hr />
      <h3
        className="heading"
      >
        <div
          className="mock"
        >
          Icon - 
          circle-info
        </div>
         
        career_information
        :
      </h3>
      <ul
        className="info"
      >
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              dollar-sign
            </div>
             
            salary_mean
            :
          </h4>
          <div
            className="infoText salary"
          >
            $107060
          </div>
        </li>
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              chart-bar
            </div>
             
            employment_growth
            :
          </h4>
          <div
            className="infoText growth"
          >
            -3.7%
          </div>
        </li>
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              graduation-cap
            </div>
             
            education
            :
          </h4>
          <div
            className="infoText education"
          >
            experience_level_1
          </div>
        </li>
      </ul>
      <ul
        className="info"
      >
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              lightbulb
            </div>
             
            bright_future
            :
          </h4>
          <div
            className="infoText"
          >
            <input
              aria-label="bright_future"
              checked={true}
              className="check"
              disabled={true}
              readOnly={true}
              type="checkbox"
            />
            <div
              className="mock"
            >
              Icon - 
              square-check
            </div>
          </div>
        </li>
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              leaf
            </div>
             
            green_career
            :
          </h4>
          <div
            className="infoText"
          >
            <input
              aria-label="green_career"
              checked={true}
              className="check"
              disabled={true}
              readOnly={true}
              type="checkbox"
            />
            <div
              className="mock"
            >
              Icon - 
              square-check
            </div>
          </div>
        </li>
        <li>
          <div
            className="center"
          >
            <button
              className="legendToggle"
              onClick={[Function]}
              title="more_information"
              type="button"
            >
              help
               
              <div
                className="mock"
              >
                Icon - 
                question
              </div>
            </button>
          </div>
        </li>
      </ul>
      <p
        className="center"
      >
        <a
          className="btnPrimary"
          href="http://www.onetonline.org/link/summary/11-3051.05"
          rel="noopener noreferrer"
          target="_blank"
          title="view_on_onet"
        >
          view_on_onet
        </a>
      </p>
      <div
        className="legend"
      >
        <ul
          className="info"
        >
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                dollar-sign
              </div>
               
              salary_mean
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "salary_mean_html",
                }
              }
            />
          </li>
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                chart-bar
              </div>
               
              employment_growth
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "employment_growth_html",
                }
              }
            />
          </li>
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                graduation-cap
              </div>
               
              education
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "education_html",
                }
              }
            />
          </li>
        </ul>
        <ul
          className="info"
        >
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                lightbulb
              </div>
               
              bright_future
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bright_future_html",
                }
              }
            />
          </li>
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                leaf
              </div>
               
              green_career
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "green_career_html",
                }
              }
            />
          </li>
        </ul>
        <p
          className="center"
        >
          <button
            className="legendToggle"
            onClick={[Function]}
            title="close"
            type="button"
          >
            close
          </button>
        </p>
      </div>
      <hr />
      <h3
        className="heading"
      >
        <div
          className="mock"
        >
          Icon - 
          earth-americas
        </div>
         
        education_level
      </h3>
      <ol
        className="experience"
      >
        <li
          className="active"
        />
        <li
          className=""
        />
        <li
          className=""
        />
        <li
          className=""
        />
        <li
          className=""
        />
      </ol>
      <p>
        Little or no previous work-related skill, knowledge, or experience is needed for these occupations. For example, a person can become a waiter or waitress even if he/she has never worked before.
      </p>
      <hr />
      <h3
        className="heading"
      >
        <div
          className="mock"
        >
          Icon - 
          circle-half-stroke
        </div>
         
        match_rate
      </h3>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "match_rate_html",
          }
        }
      />
      <div>
        <div
          className="mock"
        >
          Highchart
        </div>
      </div>
      <div />
      <hr />
      <div>
        <h3>
          <div
            className="mock"
          >
            Icon - 
            square-up-right
          </div>
           
          job_links
        </h3>
        <ul
          className="jobsLinks"
        >
          <li>
            <a
              className="jobLink"
              href="http://www.mynextmove.org/profile/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="My Next Move"
            >
              <img
                alt="My Next Move"
                src="https://cdn.traitify.com/assets/images/job-links/my-next-move.jpg"
              />
            </a>
          </li>
          <li>
            <a
              className="jobLink"
              href="http://www.onetonline.org/link/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="O*Net Online"
            >
              <img
                alt="O*Net Online"
                src="https://cdn.traitify.com/assets/images/job-links/o-net-2.jpg"
              />
            </a>
          </li>
          <li>
            <a
              className="jobLink"
              href="http://www.miproximopaso.org/profile/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="Mi Proximo Paso"
            >
              <img
                alt="Mi Proximo Paso"
                src="https://cdn.traitify.com/assets/images/job-links/mi-proximo-paso.jpg"
              />
            </a>
          </li>
          <li>
            <a
              className="jobLink"
              href="http://www.mynextmove.org/vets/profile/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="My Next Move for Veterans"
            >
              <img
                alt="My Next Move for Veterans"
                src="https://cdn.traitify.com/assets/images/job-links/my-next-move-veterans.jpg"
              />
            </a>
          </li>
        </ul>
      </div>
      <hr />
    </div>
  </section>
</div>
`;

exports[`CareerModal renders nothing if no career 1`] = `null`;

exports[`CareerModal renders nothing if not ready 1`] = `null`;

exports[`CareerModal renders nothing if not shown 1`] = `null`;

exports[`CareerModal renders unchecked squares if no bright outlooks or green categories 1`] = `
<div
  className="modal container"
  role="dialog"
>
  <section
    className="modalContainer"
  >
    <div
      className="mock"
    >
      Icon - 
      xmark
    </div>
    <div
      className="modalContent"
    >
      <img
        alt="Methane/Landfill Gas Collection System Operators"
        className="image"
        src="https://cdn.traitify.com/careers/d7da4259-9f10-4121-b0ca-7534b3ee2d3b_methane-landfill-gas-collection-system-operators"
      />
      <h2
        className="title"
      >
        Methane/Landfill Gas Collection System Operators
      </h2>
      <p
        className="description"
      >
        Direct daily operations, maintenance, or repair of landfill gas projects, including maintenance of daily logs, determination of service priorities, and compliance with reporting requirements.
      </p>
      <hr />
      <h3
        className="heading"
      >
        <div
          className="mock"
        >
          Icon - 
          circle-info
        </div>
         
        career_information
        :
      </h3>
      <ul
        className="info"
      >
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              dollar-sign
            </div>
             
            salary_mean
            :
          </h4>
          <div
            className="infoText salary"
          >
            $107060
          </div>
        </li>
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              chart-bar
            </div>
             
            employment_growth
            :
          </h4>
          <div
            className="infoText growth"
          >
            -3.7%
          </div>
        </li>
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              graduation-cap
            </div>
             
            education
            :
          </h4>
          <div
            className="infoText education"
          >
            experience_level_1
          </div>
        </li>
      </ul>
      <ul
        className="info"
      >
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              lightbulb
            </div>
             
            bright_future
            :
          </h4>
          <div
            className="infoText"
          >
            <input
              aria-label="bright_future"
              checked={false}
              className="check"
              disabled={true}
              readOnly={true}
              type="checkbox"
            />
            <div
              className="mock"
            >
              Icon - 
              square
            </div>
          </div>
        </li>
        <li>
          <h4>
            <div
              className="mock"
            >
              Icon - 
              leaf
            </div>
             
            green_career
            :
          </h4>
          <div
            className="infoText"
          >
            <input
              aria-label="green_career"
              checked={false}
              className="check"
              disabled={true}
              readOnly={true}
              type="checkbox"
            />
            <div
              className="mock"
            >
              Icon - 
              square
            </div>
          </div>
        </li>
        <li>
          <div
            className="center"
          >
            <button
              className="legendToggle"
              onClick={[Function]}
              title="more_information"
              type="button"
            >
              help
               
              <div
                className="mock"
              >
                Icon - 
                question
              </div>
            </button>
          </div>
        </li>
      </ul>
      <p
        className="center"
      >
        <a
          className="btnPrimary"
          href="http://www.onetonline.org/link/summary/11-3051.05"
          rel="noopener noreferrer"
          target="_blank"
          title="view_on_onet"
        >
          view_on_onet
        </a>
      </p>
      <div
        className="legend"
      >
        <ul
          className="info"
        >
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                dollar-sign
              </div>
               
              salary_mean
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "salary_mean_html",
                }
              }
            />
          </li>
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                chart-bar
              </div>
               
              employment_growth
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "employment_growth_html",
                }
              }
            />
          </li>
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                graduation-cap
              </div>
               
              education
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "education_html",
                }
              }
            />
          </li>
        </ul>
        <ul
          className="info"
        >
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                lightbulb
              </div>
               
              bright_future
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bright_future_html",
                }
              }
            />
          </li>
          <li>
            <h4>
              <div
                className="mock"
              >
                Icon - 
                leaf
              </div>
               
              green_career
              :
            </h4>
            <p
              dangerouslySetInnerHTML={
                Object {
                  "__html": "green_career_html",
                }
              }
            />
          </li>
        </ul>
        <p
          className="center"
        >
          <button
            className="legendToggle"
            onClick={[Function]}
            title="close"
            type="button"
          >
            close
          </button>
        </p>
      </div>
      <hr />
      <h3
        className="heading"
      >
        <div
          className="mock"
        >
          Icon - 
          earth-americas
        </div>
         
        education_level
      </h3>
      <ol
        className="experience"
      >
        <li
          className="active"
        />
        <li
          className=""
        />
        <li
          className=""
        />
        <li
          className=""
        />
        <li
          className=""
        />
      </ol>
      <p>
        Little or no previous work-related skill, knowledge, or experience is needed for these occupations. For example, a person can become a waiter or waitress even if he/she has never worked before.
      </p>
      <hr />
      <h3
        className="heading"
      >
        <div
          className="mock"
        >
          Icon - 
          circle-half-stroke
        </div>
         
        match_rate
      </h3>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "match_rate_html",
          }
        }
      />
      <div>
        <div
          className="mock"
        >
          Highchart
        </div>
      </div>
      <div />
      <hr />
      <div>
        <h3>
          <div
            className="mock"
          >
            Icon - 
            square-up-right
          </div>
           
          job_links
        </h3>
        <ul
          className="jobsLinks"
        >
          <li>
            <a
              className="jobLink"
              href="http://www.mynextmove.org/profile/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="My Next Move"
            >
              <img
                alt="My Next Move"
                src="https://cdn.traitify.com/assets/images/job-links/my-next-move.jpg"
              />
            </a>
          </li>
          <li>
            <a
              className="jobLink"
              href="http://www.onetonline.org/link/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="O*Net Online"
            >
              <img
                alt="O*Net Online"
                src="https://cdn.traitify.com/assets/images/job-links/o-net-2.jpg"
              />
            </a>
          </li>
          <li>
            <a
              className="jobLink"
              href="http://www.miproximopaso.org/profile/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="Mi Proximo Paso"
            >
              <img
                alt="Mi Proximo Paso"
                src="https://cdn.traitify.com/assets/images/job-links/mi-proximo-paso.jpg"
              />
            </a>
          </li>
          <li>
            <a
              className="jobLink"
              href="http://www.mynextmove.org/vets/profile/summary/11-3051.05"
              rel="noopener noreferrer"
              target="_blank"
              title="My Next Move for Veterans"
            >
              <img
                alt="My Next Move for Veterans"
                src="https://cdn.traitify.com/assets/images/job-links/my-next-move-veterans.jpg"
              />
            </a>
          </li>
        </ul>
      </div>
      <hr />
    </div>
  </section>
</div>
`;
